<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cat Trills</string>
    <string name="action_exit">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="start_button">Start</string>
    <string name="history_button">Show history</string>
    <string name="username_text_hint">Enter your name</string>
    <string name="connect_button">"Connect"</string>
    <string name="wait_button">"Wait for invitation"</string>
    <string name="cancel_button">"Cancel"</string>
    <string name="done_button">"Done"</string>
    <string name="stand_by_mode">"You're in STAND BY mode"</string>
    <string name="invite_button">"Invite"</string>
    <string name="stop_wait_button">"Don't wait anymore"</string>
    <string name="invite_sent">"Your invite was sent"</string>
    <string name="invite_foryou">" invites you to play the game"</string>
    <string name="qq_text_hint">"Enter the number of questions:"</string>
    <string name="commit_button">"Commit"</string>
    <string name="writeq_text_hint">"Write your question:"</string>
    <string name="writea_text_hint">"Write your answer:"</string>
    <string name="quit_button">"Quit Game"</string>
    <string name="quity_button">"Yes"</string>
    <string name="quitn_button">"No</string>
    <string name="accept_button">"Accept"</string>
    <string name="reject_button">"Reject"</string>
    <string name="check_button">"Check it"</string>
    <string name="action_language">"Language"</string>
    <string name="action_sounds">"Sounds"</string>
    <string name="action_history">"History"</string>
    <string name="language_def">"Default"</string>
    <string name="language_eng">"English"</string>
    <string name="language_ukr">"Ukrainian"</string>
    <string name="language_rus">"Russian"</string>
    <string name="sounds_on">"On"</string>
    <string name="sounds_off">"Off"</string>
    <string name="history_save">"Save"</string>
    <string name="history_notsave">"Do Not Save"</string>
    <string name="invalid_number">"You entered invalid number, please, repeat!"</string>
    <string name="string_user">"The user "</string>
    <string name="string_accept">" accepted the game!"</string>
    <string name="string_reject">" rejected the game, or busy!"</string>
    <string name="string_hello">"Hi, "</string>
    <string name="string_stillnot">"Still nothing"</string>
    <string name="string_choosepart">", choose your partner!"</string>
    <string name="string_dialog">"Read Entire dialog:"</string>
    <string name="string_quit">"Do you want to quit?"</string>
    <string name="string_namebusy">"This name already exists, or contains "space", choose another:"</string>
    <string name="Restart">Restart</string>
    <string name="string_willbe">"Will be "</string>
    <string name="string_quest">" questions"</string>
    <string name="LangTitle">Language</string>
    <string name="LangDialogTitle">Choose language:</string>
    <string name="LangSummary">Application language.\nNeed restart application to apply changes.</string>
    <string name="pref_user">"User's preferences"</string>
    <string name="hist_summary">"Save the history"</string>
    <string name="snd_summary">"Sounds on"</string>
    <string name="lng_summary">"Choose the language (Restart required)"</string>
    <string name="action_prefs">"Preferences"</string>
    <string name="string_thequestis">"The question is: "</string>
    <string name="no_connection">"No connection to server, please, try later :'("</string>

</resources>