<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/action_exit"/>
    <item
        android:key="lang"
        android:id="@+id/action_language"
        android:showAsAction="ifRoom"
        android:title="@string/action_language">
        <menu>
            
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/language_eng"
                    android:title="@string/language_eng"/>
                <item
                    android:id="@+id/language_ukr"
                    android:title="@string/language_ukr"/>
                <item
                    android:id="@+id/language_rus"
                    android:title="@string/language_rus"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_sounds"
        android:showAsAction="ifRoom"
        android:title="@string/action_sounds">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/sounds_on"
                    android:title="@string/sounds_on"/>
                <item
                    android:id="@+id/sounds_off"
                    android:title="@string/sounds_off"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_history"
        android:showAsAction="ifRoom"
        android:title="@string/action_history">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/history_save"
                    android:title="@string/history_save"/>
                <item
                    android:id="@+id/history_notsave"
                    android:title="@string/history_notsave"/>
            </group>
        </menu>
    </item>
  <PreferenceScreen android:title="@string/Restart" android:key="restart"></PreferenceScreen>
</menu>