<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity4" >

    <TextView
         android:id="@+id/game_stand_by"
         android:layout_width="273dp"
        android:layout_height="115dp"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:scrollbars="vertical"
        android:textColor="#000000"
        android:textIsSelectable="true"
        android:textSize="20sp" 
        android:text="@string/stand_by_mode"       />
    
     <Button
        android:id="@+id/game_checkit"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/check_button" />

     <Button
         android:id="@+id/game_connect"
         android:layout_width="151dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:text="@string/connect_button" />

</LinearLayout>